fix: modify align report type head

--- a/src/app/components/screen/components/list-tasks/components/fr-report/fr-report.component.scss
+++ b/src/app/components/screen/components/list-tasks/components/fr-report/fr-report.component.scss
@@ -62,8 +62,8 @@
   }
   .task-header{
     display: flex;
-    justify-content: space-between;
-    margin: 8px 0;
+    justify-content: space-around;
+    margin-top: 18px;
   }
   .head-bold{
     font-weight: 600;
